# tools

./: .editorconfig  .gitignore  .markdownlint.yaml  .shellcheckrc  CLAUDE.md  Cargo.toml  README.md  TLDR.md  check-image.sh  dirhash.pl  go.mod  go.sum  hostshash.pl  logload.pl  package.json  prcp.pl  rust-toolchain.toml  rustfmt.toml  test.sh  u2a.pl
.husky/: pre-commit
aa/: Cargo.toml
aws2env/: README.md
cmd/bm/: bulk-move.go  main.go
cmd/cf/: main.go
cmd/dirc/: README.md  dirc.go
cmd/dirhash/: main.go
cmd/gitdiggin/: README.md  gitdiggin.go
cmd/gitdiggin-rs/: Cargo.toml  README.md
cmd/gitdiggin-rs/src/: main.rs
cmd/gitrdun/: date_parsing_test.go  gitrdun.go  gitrdun_test.go  improving-ollama-context-handling.md  integration_test.go  user_filtering_test.go
cmd/glo/: README.md  glo.go
cmd/glo-rs/: Cargo.toml
cmd/hexfind/: hexfind.go
cmd/htmlboard/: main.go
cmd/jsonboard/: main.go
cmd/localnext/: local-next.go
cmd/nodenuke/: nodenuke.go
cmd/nodeup/: nodeup.go
cmd/numberof/: main.go
cmd/portplz/: main.go  port-plz.go  port-plz_test.go
cmd/prcp/: main.go
cmd/prgz/: main.go  progress-gzip.go
cmd/prhash/: main.go  progress-hash.go
cmd/prhash-rs/: Cargo.toml  README.md
cmd/prhash-rs/src/: main.rs
cmd/procinfo/: procinfo.go
cmd/reposize/: main.go
cmd/repotidy/: main.go  repo-tidy.go
cmd/repoup/: repo-upgrade.go
cmd/runat/: run-at.go
cmd/sizeof/: main.go  size-of.go
cmd/subito/: subito.go
cmd/symfix/: symfix.go
cmd/tubeboard/: tube-board.go
github-org-clone/: Cargo.toml  README.md
install-bin/: install-bin.test.ts  install-bin.ts
internal/: byte-counter-writer.go  fs.go  git-repo.go  ollama.go  printer.go
plans/: 2026-04-20-r2-bucket-cleaner-delete-bucket-flag-plan.md  2026-05-22-gsw-file-row-fade-plan.md  2026-05-25-gsw-gix-migration-plan.md  2026-05-27-gsw-watch-mode-plan.md  2026-06-02-seescc-plan.md  2026-06-03-gsw-behind-base-indicator-plan.md  2026-06-03-seescc-stable-sparklines-plan.md  2026-06-18-sirn-rust-plan.md  2026-06-26-gsw-adaptive-cpu-throttle-plan.md  kitchen-sync.md  portplz-repo-root-hashing.md
scripts/: build-go.sh  install-from-local.sh  update-deps.sh
specs/: 2026-04-20-r2-bucket-cleaner-delete-bucket-flag-design.md  2026-05-22-gsw-file-row-fade-design.md  2026-05-27-gsw-watch-mode-design.md  2026-06-02-seescc-design.md  2026-06-03-gsw-behind-base-indicator-design.md  2026-06-03-seescc-stable-sparklines-design.md  2026-06-18-sirn-rust-design.md  2026-06-26-gsw-adaptive-cpu-throttle-design.md  2026-07-01-gsw-rebase-merge-indicators-design.md  2026-07-22-crap-cross-user-sessions-design.md
src/beta/: COMPARISON.md  Cargo.toml  NLE-ROADMAP.md  README.md  test_build.sh  test_hotkey.sh  test_text.txt
src/beta/src/: main.rs  player.rs  recorder.rs  simple_test.rs  test.rs
src/beta/src/export/: mod.rs  terminal_renderer.rs  video.rs  web.rs
src/bm/: Cargo.toml
src/bm/src/: lib.rs  main.rs
src/bm/tests/: cli.rs  integration.rs
src/browser-hog/: Cargo.toml
src/browser-hog/src/: main.rs
src/clipboard-random/: Cargo.toml  README.md
src/clipboard-random/src/: main.rs
src/crap/: Cargo.toml
src/crap/src/: main.rs
src/crap/tests/: cross_user.rs  here_new_id.rs
src/cwt/: Cargo.toml
src/cwt/src/: main.rs
src/disk-hog/: Cargo.toml
src/disk-hog/src/: main.rs  model.rs  ui.rs
src/disk-hog/src/collector/: bandwidth.rs  iops.rs  mod.rs
src/diskhog/: Cargo.toml
src/diskhog/src/: main.rs  ui.rs
src/diskhog/src/collector/: bandwidth.rs  iops.rs
src/gitdiggin/: Cargo.toml  README.md
src/gitdiggin/src/: main.rs
src/gitrdun/: Cargo.toml  README.md
src/gitrdun/src/: cli.rs  date.rs  git.rs  lib.rs  main.rs  ollama.rs  results.rs  stats.rs  ui.rs
src/gitrdun/tests/: integration.rs
src/glo/: Cargo.toml
src/glo/src/: main.rs
src/gsw/: Cargo.toml
src/gsw/src/: age.rs  bar.rs  git.rs  main.rs  render.rs  repo.rs  snapshot.rs  watch.rs
src/gsw/tests/: integration.rs
src/ic/: .gitignore  Cargo.toml  README.md
src/ic/src/: main.rs
src/install-bin/: Cargo.toml
src/install-bin/src/: lib.rs  main.rs
src/install-bin/tests/: cli.rs  install.rs  verify.rs
src/kitchen-sync/: Cargo.toml
src/kitchen-sync/src/: main.rs
src/msgs/: Cargo.toml  tauri.conf.json
src/msgs/capabilities/: default.json
src/msgs/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/msgs/frontend/src/: conversations.ts  export.ts  main.ts  messages.ts  search.ts  types.ts
src/msgs/frontend/src/styles/: main.css
src/msgs/scripts/: dev.ts
src/msgs/src/: cache.rs  commands.rs  db.rs  error.rs  export.rs  main.rs  parser.rs  types.rs  util.rs
src/ng/: Cargo.toml
src/ng/src/: main.rs
src/nle/: Cargo.toml  tauri.conf.json
src/nle/bindings/: Recording.ts  RecordingMetadata.ts
src/nle/capabilities/: default.json
src/nle/frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
src/nle/frontend/src/: App.css  App.tsx  main.tsx
src/nle/frontend/src/bindings/: Event.ts  EventType.ts  ExportFormat.ts  ExportOptions.ts  LoadedRecording.ts  index.ts
src/nle/frontend/src/components/: menu-bar.tsx  preview-pane.tsx  properties-panel.test.tsx  properties-panel.tsx  timeline.test.tsx  timeline.tsx
src/nle/src/: commands.rs  error.rs  lib.rs  main.rs  types.rs
src/nwt/: Cargo.toml
src/nwt/src/: main.rs
src/nwt/tests/: builder-guard.rs  no-raw-nwt-spawn.rs  quiet-hooks-warning.rs  run-fixes-hooks-no-warning.rs  run-install-dedup.rs  tab-rename.rs
src/nwt/tests/support/: mod.rs
src/op-cache/: Cargo.toml
src/op-cache/hooks/: post-checkout  pre-commit
src/op-cache/src/: lib.rs  main.rs
src/org-borg/: Cargo.toml  README.md
src/org-borg/src/: auth.rs  commands.rs  git.rs  github.rs  main.rs
src/pk/: Cargo.toml
src/pk/src/: main.rs
src/portcul/: Cargo.toml
src/portcul/src/: main.rs  process.rs  ui.rs
src/prcp/: BENCHMARKS.md  Cargo.toml
src/prcp-1/: Cargo.toml
src/prcp-2/: Cargo.toml
src/prcp-2/src/: main.rs  tests.rs
src/prcp/src/: main.rs
subito/: Cargo.toml
swt/: swt.ts
(+213 files in other folders)
