[package]
name = "subito"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subito"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24", features = ["websocket"] }
aws-config = "1.5"
aws-sdk-iot = "1.50"
aws-types = "1.3"
aws-credential-types = "1.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
chrono = "0.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"