[package]
name = "prhash"
version = "0.1.0"
edition = "2021"
authors = ["Tim Mattison"]
description = "A tool to hash files with progress display"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
indicatif = "0.17.8"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
blake3 = "1.5.0"
dialoguer = "0.11.0"
crossterm = "0.27.0"
num-format = "0.4.4"