[package]
name = "beta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
chrono = "0.4"
flate2 = "1.0"
terminal_size = "0.3"