[package]
name = "bm"
version = "0.1.0"
edition.workspace = true
rust-version = "1.80"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
clap.workspace = true
filewalker.workspace = true
indicatif.workspace = true
termbar.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
