[package]
name = "browser-hog"
version = "0.1.0"
description = "Identify which Chrome processes are using the most CPU and show open tabs"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "browser-hog"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
colored.workspace = true
human_bytes.workspace = true
crossterm.workspace = true
chrono.workspace = true
ctrlc = "3.4"

[lints]
workspace = true
