[package]
name = "clipboard-random"
version = "0.1.0"
edition.workspace = true
description = "Generate random data and copy it to the clipboard/paste buffer"

[[bin]]
name = "clipboard-random"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rand.workspace = true
arboard.workspace = true
anyhow.workspace = true
base64.workspace = true

[lints]
workspace = true
