[package]
name = "clipboard-random"
version = "0.1.0"
edition.workspace = true
description = "Generate random data and copy it to the clipboard/paste buffer"

[[bin]]
name = "clipboard-random"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
buildinfo.workspace = true
clap.workspace = true
rand.workspace = true

[lints]
workspace = true
