[package]
name = "crap"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "crap"
path = "src/main.rs"

[dependencies]
buildinfo.workspace = true
clap.workspace = true
colored.workspace = true
dirs.workspace = true
serde_json.workspace = true
shellsetup.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
