[package]
name = "cwt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cwt"
path = "src/main.rs"

[dependencies]
repowalker = { path = "../repowalker" }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dirs = "6.0"

[lints.rust]
# Enforce stricter checks to catch issues early
unsafe_code = "deny"

[lints.clippy]
# Pedantic lints help catch subtle issues like redundant code
pedantic = { level = "warn", priority = -1 }
# Allow certain pedantic lints that are too strict for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
