[package]
name = "cwt"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cwt"
path = "src/main.rs"

[dependencies]
repowalker.workspace = true
shellsetup.workspace = true
clap.workspace = true
colored.workspace = true

[lints.rust]
# Enforce stricter checks to catch issues early
unsafe_code = "deny"

[lints.clippy]
# Pedantic lints help catch subtle issues like redundant code
pedantic = { level = "warn", priority = -1 }
# Allow certain pedantic lints that are too strict for this codebase
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
