[package]
name = "gitdiggin"
version = "0.1.0"
edition = "2021"
authors = ["Tim Mattison"]
description = "Recursively searches Git repositories for commits containing a specific string"

[dependencies]
git2 = "0.20.2"
clap = { version = "4.5.42", features = ["derive"] }
walkdir = "2.5.0"
indicatif = "0.18.0"
crossbeam = "0.8.4"
anyhow = "1.0.98"
