[package]
name = "gitdiggin"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Mattison"]
description = "Recursively searches Git repositories for commits containing a specific string"

[dependencies]
git2.workspace = true
clap.workspace = true
repowalker.workspace = true
walkdir.workspace = true
indicatif.workspace = true
crossbeam.workspace = true
anyhow.workspace = true

[lints]
workspace = true
