[package]
name = "gitdiggin"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Mattison"]
description = "Recursively searches Git repositories for commits containing a specific string"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
clap.workspace = true
crossbeam.workspace = true
git2.workspace = true
indicatif.workspace = true
repowalker.workspace = true
walkdir.workspace = true

[lints]
workspace = true
