[package]
name = "gitrdun"
version = "0.1.0"
edition = "2021"
authors = ["Tim Mattison"]
description = "Find and summarize recent git commits across multiple repositories"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = "0.4"
chrono-english = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
crossterm = "0.29.0"
dirs = "6.0.0"
git2 = "0.20"
indicatif = "0.18.0"
parking_lot = "0.12"
ratatui = "0.29"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
walkdir = "2.5"

[dev-dependencies]
tempdir = "0.3"
mockito = "1.7"
