[package]
name = "gitrdun"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Mattison"]
description = "Find and summarize recent git commits across multiple repositories"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
chrono.workspace = true
chrono-english.workspace = true
clap.workspace = true
crossterm.workspace = true
git2.workspace = true
parking_lot.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
