[package]
name = "glo"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Mattison"]
description = "A tool to find large objects in Git repositories"

[dependencies]
git2.workspace = true
clap.workspace = true
anyhow.workspace = true
human_bytes.workspace = true
thiserror.workspace = true
repowalker.workspace = true

[lints]
workspace = true
