[package]
name = "glo"
version = "0.1.0"
edition.workspace = true
authors = ["Tim Mattison"]
description = "A tool to find large objects in Git repositories"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
clap.workspace = true
git2.workspace = true
human_bytes.workspace = true
repowalker.workspace = true
thiserror.workspace = true

[lints]
workspace = true
