[package]
name = "gsw"
version = "0.1.0"
edition.workspace = true
description = "Compact git status watch — event-driven, self-refreshing branch-state view"

[[bin]]
name = "gsw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
clap.workspace = true
colored.workspace = true
crossterm.workspace = true
gix.workspace = true
ignore.workspace = true
notify.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
