[package]
name = "ic"
version = "0.1.0"
edition = "2021"
description = "Fast terminal image display utility for iTerm2, similar to imgcat"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
base64 = "0.22"
anyhow = "1.0"
terminal_size = "0.4"
termion = "4.0.5"
libc = "0.2.172"
notify = "8.0.0"

[[bin]]
name = "ic"
path = "src/main.rs"
