[package]
name = "ic"
version = "0.1.0"
edition.workspace = true
description = "Fast terminal image display utility for iTerm2, similar to imgcat"

[[bin]]
name = "ic"
path = "src/main.rs"

[dependencies]
clap.workspace = true
image.workspace = true
base64.workspace = true
anyhow.workspace = true
terminal_size.workspace = true
termion.workspace = true
libc.workspace = true
notify.workspace = true

[lints]
workspace = true
