[package]
name = "ic"
version = "0.1.0"
edition.workspace = true
description = "Fast terminal image display utility for iTerm2, similar to imgcat"

[[bin]]
name = "ic"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
buildinfo.workspace = true
clap.workspace = true
icy_sixel.workspace = true
image.workspace = true
libc.workspace = true
notify.workspace = true
terminal_size.workspace = true
termion.workspace = true

[lints]
workspace = true
