[package]
name = "install-bin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Install a locally built binary onto a fresh inode without tripping macOS's code-signature cache"

[[bin]]
name = "install-bin"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
wait-timeout.workspace = true
clap.workspace = true
buildinfo.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
