[package]
name = "kitchen-sync"
version = "0.1.0"
edition.workspace = true
description = "Install every Rust binary from a git repo with a single command"

[dependencies]
anyhow.workspace = true
buildinfo.workspace = true
clap.workspace = true
glob.workspace = true
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
