[package]
name = "msgs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
rusqlite.workspace = true
specta.workspace = true
tauri-specta.workspace = true
buildinfo.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
