[package]
name = "nle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Non-linear editor for terminal recordings"

[lib]
name = "nle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
flate2 = "1.0"
buildinfo = { workspace = true }
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
