[package]
name = "nwt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nwt"
path = "src/main.rs"

[dependencies]
repowalker = { path = "../repowalker" }
clap = { version = "4.5", features = ["derive"] }
names = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
