[package]
name = "nwt"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "nwt"
path = "src/main.rs"

[dependencies]
buildinfo.workspace = true
clap.workspace = true
dirs.workspace = true
names.workspace = true
repowalker.workspace = true
serde.workspace = true
shellsetup.workspace = true
toml.workspace = true

[lints]
workspace = true
