[package]
name = "org-borg"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
git2.workspace = true
indicatif.workspace = true
colored.workspace = true
dirs.workspace = true
termbar.workspace = true

[lints]
workspace = true
