[package]
name = "prcp-1"
version = "0.1.0"
edition = "2021"
authors = ["Tim Mattison"]
description = "Progress copy - file copy with progress bar using Ratatui"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.45", features = ["full"] }

[[bin]]
name = "prcp"
path = "src/main.rs"
