[package]
name = "prcp"
version = "0.1.0"
edition.workspace = true
rust-version = "1.80"

[dependencies]
clap.workspace = true
indicatif.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tokio.workspace = true
blake3.workspace = true
libc.workspace = true
glob.workspace = true
shellsetup.workspace = true
colored.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
