[package]
name = "prcp"
version = "0.1.0"
edition.workspace = true
rust-version = "1.80"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
buildinfo.workspace = true
clap.workspace = true
colored.workspace = true
crossterm.workspace = true
glob.workspace = true
indicatif.workspace = true
libc.workspace = true
shellsetup.workspace = true
termbar.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
